--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="gray">#AAAAAA</color>
+    <color name="pastel_red">#f18484</color>
+    <color name="pastel_green">#84f184</color>
+    <color name="pastel_blue">#8484f1</color>
 </resources>
